# fuzzywuzzy-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: check.yml  clippy.yml  fmt.yml  tests.yml
src/: fuzz.rs  lib.rs  normalization.rs  primitives.rs  process.rs  segmentation.rs  string_matcher.rs  stringmatcher.rs  utils.rs
src/fuzzywuzzy_compatible/: fuzz.rs  mod.rs  process.rs  string_processing.rs  utils.rs
