[package]
name = "fuzzywuzzy"
version = "0.0.2"
authors = ["Logan", "Sean"]
description = "A pure-Rust clone of the incredibly useful fuzzy string matching python package, FuzzyWuzzy."
repository = "https://github.com/logannc/fuzzywuzzy-rs"
readme="README.md"
license = "GPL-2.0-only"
keywords = ["string", "text", "utility"]
categories = ["text-processing"]


[dependencies]
