[package]
name = "fuzzywuzzy"
version = "0.0.2"
edition = "2018"
authors = ["Logan", "Sean"]
description = "A pure-Rust clone of the incredibly useful fuzzy string matching python package, FuzzyWuzzy."
repository = "https://github.com/logannc/fuzzywuzzy-rs"
readme="README.md"
license = "GPL-2.0-only"
keywords = ["string", "text", "processing", "matching", "fuzzy"]
categories = ["text-processing"]


[features]
default = ["segmentation", "normalization"]
segmentation = ["unicode-segmentation"]
normalization = ["unicode-normalization"]

[dependencies]
unicode-segmentation = { version = "1.7.1", optional = true }
unicode-normalization = { version = "0.1.17", optional = true }

[dev-dependencies]
rand = "0.8.0"
